--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://pkfiyah.github.io/portfolio-pkfiyah",
+  "homepage": "http://pkfiyah.github.io/",
   "dependencies": {
     "@carbon/icons-react": "^10.25.0",
     "@carbon/themes": "^10.26.0",
