--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "http://pkfiyah.github.io/napknight.com",
+  "private": false,
   "dependencies": {
     "@carbon/icons-react": "^10.25.0",
     "@carbon/themes": "^10.26.0",
